--- a/src/asset/scss/style.scss
+++ b/src/asset/scss/style.scss
@@ -14,6 +14,7 @@
 @import "images";
 @import "code";
 @import "grid";
+@import "container-grid";
 @import "tables";
 @import "forms";
 @import "buttons";
@@ -43,12 +44,21 @@
 @import "utilities";
 @import "print";
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .logo {
-  font-family: "Poppins", sans-serif;
   font-size: 28px;
   font-weight: bold;
   line-height: 28px * 1.5;
   color: $secondary;
+
+  &:focus {
+    border: 0;
+  }
 }
 
 header {
@@ -76,6 +86,109 @@ header {
             }
           }
         }
+      }
+    }
+  }
+}
+
+section {
+  margin-top: 70px;
+}
+
+.card {
+  height: 100%;
+  position: relative;
+  border-radius: 1.25rem;
+  border: none;
+
+  .tag {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 4;
+    background-color: $red;
+    overflow: hidden;
+    border-radius: 0px 1.25rem;
+    text-align: center;
+    font-size: 1.125rem;
+    padding: 8px 24px;
+    color: $white;
+  }
+
+  .img-wrapper {
+    height: 100%;
+    margin-bottom: 0;
+    border-radius: 1.25rem;
+    overflow: hidden;
+
+    .img-cover {
+      object-fit: cover;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .detail-product {
+    h2,
+    span {
+      margin: 0;
+    }
+  }
+
+  &.card-featured {
+    cursor: pointer;
+    overflow: hidden;
+    height: 100%;
+    border-radius: 1.25rem;
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      z-index: 2;
+      transform: scale(1.1);
+      transition: 0.5s transform ease-in-out;
+      @include gradient-y(rgba($black, 0), rgba($black, 0.75), 0%, 100%);
+    }
+
+    .img-wrapper {
+      z-index: 1;
+      margin: 0;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      transform: scale(1.1);
+      transition: 0.25s transform ease-in-out;
+    }
+
+    .detail-product {
+      z-index: 4;
+      color: white;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      transform: translateY(0);
+      transition: 0.25s transform ease-in-out;
+      display: flex;
+      justify-content: flex-end;
+      flex-direction: column;
+    }
+
+    &:hover {
+      &:after,
+      .img-wrapper {
+        transform: scale(1);
+      }
+
+      .detail-product {
+        transform: translateY(-5px);
       }
     }
   }
